--- a/02-literature.Rmd
+++ b/02-literature.Rmd
@@ -74,3 +74,9 @@ It was found that using industry beta to predict future stock betas was possible
 
 Next, looking at 31 developed countries including Canada, France, Germany, Japan, and Singapore, the paper worked to decompose the low risk anomaly into country and stock specific effects. Similar to the industry findings, country beta was able to predict stock betas to a certain extent, but not as well as historical stock betas were. Looking only at country betas yielded around half the risk reduction and two-thirds the risk adjusted return improvement, as compared to stock betas. This study implies that predicting risk of individual stocks is in itself very hard when only given data on country or industry risk, but when given all the data can have much more predictive power. 
 
+## Understanding Defensive Equity by Robert Novy-Marx
+Defensive equity strategies generally will aim at including more safe/defensive stocks than risky/aggressive stocks, often with respect to a stock’s volatility or beta. This strategy has been becoming very popular as of late, due in part to equity markets that have suffered two recent, severe bear markets, negative nominal returns in the first decade of 2000, and literature proving a weak or negative relationship between risk and return. Lots of prior literature has looked at the relationship of performance to size and value, but many have not discussed the effect of profitability. This has been the case even though it has been shown that high profitability is the most significant predictor of low volatility. Thus, inherently, these defensive equity strategies indirectly tilt towards profitability, in addition to size and value. Size is also important, as small growth stocks are typically underweighted in these strategies, while large value stocks are overweighted. Thus, the performance of defensive equity strategies can be explained through accounting for size, value, and profitability. 
+
+In terms of performance, defensive equity strategies, defined as low volatility or low beta, have outperformed more aggressive strategies. More specifically, low volatility portfolios have outperformed high volatility portfolios from 1968-2015, and low beta portfolios have outperformed high beta portfolios from 1968-2015. The paper also looks at the characteristics of these portfolios is more detail by analyzing log-likelihood ratios that a stock selected at random is of a given style, like size or value, relative to the unconditional probability of being that style. The findings were very telling. On average, low volatility stocks were 30 times larger than high volatility stocks. As a result, though the high volatility names made up the total number of stocks, it contributed to just 9% of the total market capitalization when compared with low volatility stocks. When looking at the average returns across the portfolios of various volatilities, there seemed to be a relatively flat, slightly increased return with increasing volatility. The high volatility/high beta portfolio had a significant negative alpha, while the low volatility/low beta portfolio had a significant positive alpha. 
+
+Many of the volatile stocks tend to be small, unprofitable growth stocks, which can help explain the relationship of the defensive strategy performance to size, value, and profitability. In fact, since 1968-2015, the portfolio of high volatility stocks almost mirrors the performance of the portfolio of unprofitable, small growth stocks. Thus, the outperformance of defensive stocks from 1968-2015 have delivered significant alphas, and can be explained when accounting for size, value, and profitability. In fact, profitability itself is so significant, that the case can be made that this alpha may be due in large part due to excluding unprofitable, small growth stocks.   
